2005-06-24 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: There was a bug in the sorting code for the userlist.
 
 The place for typing will now retain it's position when tabs are changed/
 windows are taken from being key.

2005-06-22 Andrew Ruder <aeruder@ksu.edu>
 * IRCSwarm: Updating to allow time constraints (to adjust time between
 events) and correct case on nicknames.

 * GNUstepOutput: Using bold font correctly.  (It was only appropriately
 applied when the preferences were updated.)

 Removed caching (over complicated logic) from NSAttributedString.

 Several bug fixes in TabMasterController.m along the way to reenabling
 the select previous/next tab/close tab buttons on the menu. (which now
 work)

 * TalkSoup.app: I am a fricking retard.  I had doubleReleaseCheck on.
 Yes.  That is why it was slow.  I... am... a... retard.
 
 Retard
 Retard
 Retard

 TalkSoup is fast again.

2005-06-20 Andrew Ruder <aeruder@ksu.edu>
 * All: Additional header changes/code tweaks to allow clean compilation
 on OS X.  (Still no .nib files though... :-/)
 
 * All: Improvements on reducing autorelease usage.

 * GNUstepOutput: Force use of NSMessagePort even when the default is
 something else.

2005-06-17 Andrew Ruder <aeruder@ksu.edu>
 * Testing: Added a IRCSwarm testing tool that can replay preprocessed
 xchat logs (perl scripts can be easily written to process any type of log).
 It will connect to a server and more or less replay those logs.  Useful for
 debugging large amounts of messages.
 
2005-06-13 Andrew Ruder <aeruder@ksu.edu>
 * All: Filled in lots of headers that will be needed for
 OS X compilation.  Fixed relative paths in GNUmakefile.preambles
 in Output/GNUstepOutput and Input/NetclassesInput.

 * GNUstepOutput: /topic command works again, fixed topic inspector to
 stop double querying the topic.

2005-06-12 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: dns_helper returns the reverse lookup of the hostname
 as well.
