@@ -1,3 +1,7 @@
+2005-06-25 Andrew Ruder <aeruder@ksu.edu>
+ * GNUstepOutput: Fixed serverlist focusing issues.  When you remove a server
+ it won't always scroll to the top.
+
 2005-06-24 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: There was a bug in the sorting code for the userlist.
  
